--- a/styles.css
+++ b/styles.css
@@ -3,3 +3,30 @@
     padding: 0;
     box-sizing: 0;
 }
+
+body{
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    line-height: 1.5rem;
+    color: black;
+    background-color: lightsteelblue;
+
+}
+
+header{
+    text-align: center;
+    background-color: lemonchiffon;
+    color: lightslategrey;
+    padding: 2rem 0;
+}
+
+.logo{
+    max-width: 50%;
+}
+
+nav{
+    width: 100%;
+    padding: 1rem 0;
+    width: 100%;
+
+}
+
