--- a/styles.css
+++ b/styles.css
@@ -27,6 +27,13 @@ nav{
     width: 100%;
     padding: 1rem 0;
     width: 100%;
+}
+nav a{
+
+    color: steelblue;
+    text-decoration: none;
+    padding: ;
+    
 
 }
 
